trunk/Archive2/6d/ad29dc1a72a9f2/output
main.cpp:1:1: error: unknown type name 'import'
import QtQuick 2.3
^
main.cpp:1:15: error: expected ';' after top level declarator
import QtQuick 2.3
              ^
              ;
2 errors generated.
