trunk/Archive2/6d/ad29dc1a72a9f2/main.cpp
import QtQuick 2.3

Rectangle {
    width: 800
    height: 600
    color: "lightblue"
    Text {
        anchors.top: parent.top
        anchors.horizontalCenter: parent.horizontalCenter
        text: "hello all folks"
    }
}
